<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"

            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp">

                    <ImageView
                        android:id="@+id/img_product"
                        android:layout_width="75dp"
                        android:layout_height="95dp"
                       android:paddingTop="20dp"
                        android:scaleType="fitXY"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/image_placeholder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txt_stock_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:background="@color/red"
                            android:paddingLeft="5dp"
                            android:paddingRight="3dp"
                            android:paddingBottom="2dp"
                            android:text="@string/low_stock"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="visible" />
                    <RelativeLayout
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txt_stock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                           android:layout_alignParentRight="true"
                           android:gravity="right"
                            android:paddingRight="8dp"
                            android:paddingLeft="5dp"
                            android:background="@color/colorPrimary"

                            android:textColor="@color/white"
                            android:paddingBottom="2dp"
                            android:text="@string/stock"

                            android:textSize="12sp"
                            android:visibility="visible" />
                    </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_product_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="3dp"
                        android:text="@string/product_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/sailec_regular" />
                    <TextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"

                        android:paddingLeft="10dp"
                        android:text="@string/price"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:fontFamily="@font/sailec_regular" />
<!--                    <TextView-->
<!--                        android:id="@+id/txt_stock"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:gravity="left"-->
<!--                        android:paddingLeft="10dp"-->
<!--                        android:text="@string/stock"-->
<!--                        app:fontFamily="@font/sailec_regular" />-->

                    <TextView
                        android:id="@+id/txt_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone"
                        android:padding="2dp"
                        android:text="@string/weight"
                        app:fontFamily="@font/sailec_regular" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:visibility="gone"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_tax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/tax" />

                    </LinearLayout>



                        <Button
                            android:id="@+id/btn_add_cart"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"

                            android:background="@color/colorPrimary"
                            android:fontFamily="@font/sailec_regular"
                            android:text="@string/add_to_cart"
                            android:textColor="#fff"
                            android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



</LinearLayout>